Completed Batching Data
Committer: Matthias Ludwig <matthiasludwig@me.com>

--- a/intro-to-rnns/Anna_KaRNNa.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('anna.txt', 'r') as f:\n",
     "    text=f.read()\n",
-    "vocab = sorted(set(text))\n",
-    "vocab_to_int = {c: i for i, c in enumerate(vocab)}\n",
-    "int_to_vocab = dict(enumerate(vocab))\n",
-    "encoded = np.array([vocab_to_int[c] for c in text], dtype=np.int32)"
+    "vocab = sorted(set(text)) # Get character and seperate it out. Getting rid of duplicates\n",
+    "vocab_to_int = {c: i for i, c in enumerate(vocab)} # Maps the character to an integer\n",
+    "int_to_vocab = dict(enumerate(vocab)) # From Integers to characters\n",
+    "encoded = np.array([vocab_to_int[c] for c in text], dtype=np.int32) # Integers of the text"
    ]
   },
   {
@@ -56,9 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text[:100]"
    ]
@@ -72,9 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([31, 64, 57, 72, 76, 61, 74,  1, 16,  0,  0,  0, 36, 57, 72, 72, 81,\n",
+       "        1, 62, 57, 69, 65, 68, 65, 61, 75,  1, 57, 74, 61,  1, 57, 68, 68,\n",
+       "        1, 57, 68, 65, 67, 61, 26,  1, 61, 78, 61, 74, 81,  1, 77, 70, 64,\n",
+       "       57, 72, 72, 81,  1, 62, 57, 69, 65, 68, 81,  1, 65, 75,  1, 77, 70,\n",
+       "       64, 57, 72, 72, 81,  1, 65, 70,  1, 65, 76, 75,  1, 71, 79, 70,  0,\n",
+       "       79, 57, 81, 13,  0,  0, 33, 78, 61, 74, 81, 76, 64, 65, 70],\n",
+       "      dtype=int32)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "encoded[:100]"
    ]
@@ -88,11 +116,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "len(vocab)"
+    "len(vocab)\n",
+    "\n",
+    "#print(vocab) different kind of characters that are in the text"
    ]
   },
   {
@@ -123,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,20 +179,29 @@
     "       n_steps: Number of sequence steps per batch\n",
     "    '''\n",
     "    # Get the number of characters per batch and number of batches we can make\n",
-    "    characters_per_batch = \n",
-    "    n_batches = \n",
+    "    characters_per_batch = batch_size * n_steps\n",
+    "    n_batches = int(len(arr) / characters_per_batch)\n",
+    "    chars_keep = int(characters_per_batch * n_batches)\n",
     "    \n",
     "    # Keep only enough characters to make full batches\n",
-    "    arr = \n",
+    "    #\n",
+    "    arr = arr[:chars_keep]\n",
+    "    # print(arr.shape) 1985000\n",
     "    \n",
     "    # Reshape into batch_size rows\n",
-    "    arr = \n",
+    "    size = (batch_size, -1)\n",
+    "    arr = arr.reshape(size)\n",
     "    \n",
     "    for n in range(0, arr.shape[1], n_steps):\n",
     "        # The features\n",
-    "        x = \n",
+    "        x = arr[:,n:n+n_steps]\n",
     "        # The targets, shifted by one\n",
-    "        y = \n",
+    "        y_temp = arr[:,n+1:n+n_steps+1]\n",
+    "        \n",
+    "        # The last batch will be one character short\n",
+    "        y = np.zeros(x.shape, dtype=x.dtype)\n",
+    "        y[:,:y_temp.shape[1]] = y_temp\n",
+    "        \n",
     "        yield x, y"
    ]
   },
@@ -164,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,9 +224,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      " [[31 64 57 72 76 61 74  1 16  0]\n",
+      " [ 1 57 69  1 70 71 76  1 63 71]\n",
+      " [78 65 70 13  0  0  3 53 61 75]\n",
+      " [70  1 60 77 74 65 70 63  1 64]\n",
+      " [ 1 65 76  1 65 75 11  1 75 65]\n",
+      " [ 1 37 76  1 79 57 75  0 71 70]\n",
+      " [64 61 70  1 59 71 69 61  1 62]\n",
+      " [26  1 58 77 76  1 70 71 79  1]\n",
+      " [76  1 65 75 70  7 76 13  1 48]\n",
+      " [ 1 75 57 65 60  1 76 71  1 64]]\n",
+      "\n",
+      "y\n",
+      " [[64 57 72 76 61 74  1 16  0  0]\n",
+      " [57 69  1 70 71 76  1 63 71 65]\n",
+      " [65 70 13  0  0  3 53 61 75 11]\n",
+      " [ 1 60 77 74 65 70 63  1 64 65]\n",
+      " [65 76  1 65 75 11  1 75 65 74]\n",
+      " [37 76  1 79 57 75  0 71 70 68]\n",
+      " [61 70  1 59 71 69 61  1 62 71]\n",
+      " [ 1 58 77 76  1 70 71 79  1 75]\n",
+      " [ 1 65 75 70  7 76 13  1 48 64]\n",
+      " [75 57 65 60  1 76 71  1 64 61]]\n"
+     ]
+    }
+   ],
    "source": [
     "print('x\\n', x[:10, :10])\n",
     "print('\\ny\\n', y[:10, :10])"
@@ -811,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
