Completed all steps including Building the Network

--- a/intro-to-rnns/Anna_KaRNNa.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,11 +329,11 @@
     "        \n",
     "    '''\n",
     "    # Declare placeholders we'll feed into the graph\n",
-    "    inputs = \n",
-    "    targets = \n",
+    "    inputs = tf.placeholder(tf.int32, shape=(batch_size, num_steps), name='inputs')\n",
+    "    targets = tf.placeholder(tf.int32, shape=(batch_size, num_steps), name='targets')\n",
     "    \n",
     "    # Keep probability placeholder for drop out layers\n",
-    "    keep_prob = \n",
+    "    keep_prob = tf.placeholder(tf.float32, name='keep_prob')\n",
     "    \n",
     "    return inputs, targets, keep_prob"
    ]
@@ -388,10 +388,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def build_cell(num_units, keep_prob):\n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(num_units)\n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
+    "    \n",
+    "    return drop\n",
+    "\n",
     "def build_lstm(lstm_size, num_layers, batch_size, keep_prob):\n",
     "    ''' Build LSTM cell.\n",
     "    \n",
@@ -405,14 +411,14 @@
     "    '''\n",
     "    ### Build the LSTM Cell\n",
     "    # Use a basic LSTM cell\n",
-    "    lstm = \n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(lstm_size)\n",
     "    \n",
     "    # Add dropout to the cell outputs\n",
-    "    drop = \n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
     "    \n",
     "    # Stack up multiple LSTM layers, for deep learning\n",
-    "    cell = \n",
-    "    initial_state = \n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([build_cell(lstm_size, keep_prob) for _ in range(num_layers)])\n",
+    "    initial_state = cell.zero_state(batch_size, tf.float32)\n",
     "    \n",
     "    return cell, initial_state"
    ]
@@ -429,14 +435,14 @@
     "\n",
     "We are using the same fully connected layer, the same weights, for each of the outputs. Then, to make things easier, we should reshape the outputs into a 2D tensor with shape $(M * N) \\times L$. That is, one row for each sequence and step, where the values of each row are the output from the LSTM cells. We get the LSTM output as a list, `lstm_output`. First we need to concatenate this whole list into one array with [`tf.concat`](https://www.tensorflow.org/api_docs/python/tf/concat). Then, reshape it (with `tf.reshape`) to size $(M * N) \\times L$.\n",
     "\n",
-    "One we have the outputs reshaped, we can do the matrix multiplication with the weights. We need to wrap the weight and bias variables in a variable scope with `tf.variable_scope(scope_name)` because there are weights being created in the LSTM cells. TensorFlow will throw an error if the weights created here have the same names as the weights created in the LSTM cells, which they will be default. To avoid this, we wrap the variables in a variable scope so we can give them unique names.\n",
+    "Once we have the outputs reshaped, we can do the matrix multiplication with the weights. We need to wrap the weight and bias variables in a variable scope with `tf.variable_scope(scope_name)` because there are weights being created in the LSTM cells. TensorFlow will throw an error if the weights created here have the same names as the weights created in the LSTM cells, which they will be default. To avoid this, we wrap the variables in a variable scope so we can give them unique names.\n",
     "\n",
     "> **Exercise:** Implement the output layer in the function below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,28 +454,28 @@
     "        \n",
     "        lstm_output: List of output tensors from the LSTM layer\n",
     "        in_size: Size of the input tensor, for example, size of the LSTM cells\n",
-    "        out_size: Size of this softmax layer\n",
+    "        out_size: Size of this softmax layer. Number of chars.\n",
     "    \n",
     "    '''\n",
     "\n",
     "    # Reshape output so it's a bunch of rows, one row for each step for each sequence.\n",
     "    # Concatenate lstm_output over axis 1 (the columns)\n",
-    "    seq_output = \n",
+    "    seq_output = tf.concat(lstm_output, axis=1)\n",
     "    # Reshape seq_output to a 2D tensor with lstm_size columns\n",
-    "    x = \n",
+    "    x = tf.reshape(seq_output, [-1, in_size])\n",
     "    \n",
     "    # Connect the RNN outputs to a softmax layer\n",
     "    with tf.variable_scope('softmax'):\n",
     "        # Create the weight and bias variables here\n",
-    "        softmax_w = \n",
-    "        softmax_b = \n",
+    "        softmax_w = tf.Variable(tf.truncated_normal((in_size, out_size), stddev=0.1))\n",
+    "        softmax_b = tf.Variable(tf.zeros(out_size))\n",
     "    \n",
     "    # Since output is a bunch of rows of RNN cell outputs, logits will be a bunch\n",
     "    # of rows of logit outputs, one for each step and sequence\n",
-    "    logits = \n",
+    "    logits = tf.matmul(x, softmax_w) + softmax_b\n",
     "    \n",
     "    # Use softmax to get the probabilities for predicted characters\n",
-    "    out = \n",
+    "    out = tf.nn.softmax(logits, name='predictions')\n",
     "    \n",
     "    return out, logits"
    ]
@@ -489,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,11 +512,12 @@
     "    '''\n",
     "    \n",
     "    # One-hot encode targets and reshape to match logits, one row per sequence per step\n",
-    "    y_one_hot = \n",
-    "    y_reshaped =  \n",
+    "    y_one_hot = tf.one_hot(targets, num_classes)\n",
+    "    y_reshaped =  tf.reshape(y_one_hot, logits.get_shape())\n",
     "    \n",
     "    # Softmax cross entropy loss\n",
-    "    loss = \n",
+    "    loss = tf.nn.softmax_cross_entropy_with_logits(labels=y_reshaped, logits=logits)\n",
+    "    loss = tf.reduce_mean(loss)\n",
     "    \n",
     "    return loss"
    ]
@@ -526,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,25 +588,25 @@
     "        tf.reset_default_graph()\n",
     "        \n",
     "        # Build the input placeholder tensors\n",
-    "        self.inputs, self.targets, self.keep_prob = \n",
+    "        self.inputs, self.targets, self.keep_prob = build_inputs(batch_size, num_steps)\n",
     "\n",
     "        # Build the LSTM cell\n",
-    "        cell, self.initial_state = \n",
+    "        cell, self.initial_state = build_lstm(lstm_size, num_layers, batch_size, self.keep_prob)\n",
     "\n",
     "        ### Run the data through the RNN layers\n",
     "        # First, one-hot encode the input tokens\n",
-    "        x_one_hot = \n",
+    "        x_one_hot = tf.one_hot(self.inputs, num_classes)\n",
     "        \n",
     "        # Run each sequence step through the RNN with tf.nn.dynamic_rnn \n",
-    "        outputs, state =\n",
+    "        outputs, state = tf.nn.dynamic_rnn(cell, inputs=x_one_hot, initial_state=self.initial_state)\n",
     "        self.final_state = state\n",
     "        \n",
     "        # Get softmax predictions and logits\n",
-    "        self.prediction, self.logits = \n",
+    "        self.prediction, self.logits = build_output(outputs, lstm_size, num_classes)\n",
     "        \n",
     "        # Loss and optimizer (with gradient clipping)\n",
-    "        self.loss =  \n",
-    "        self.optimizer = "
+    "        self.loss = build_loss(logits=self.logits, targets=self.targets, lstm_size=lstm_size, num_classes=num_classes)\n",
+    "        self.optimizer = build_optimizer(loss=self.loss, learning_rate=learning_rate, grad_clip=grad_clip)"
    ]
   },
   {
@@ -650,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,11 +686,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "InternalError",
+     "evalue": "Failed to create session.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInternalError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-109-6fbd3ad10191>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0msaver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSaver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_to_keep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglobal_variables_initializer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/intro-to-rnns/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, target, graph, config)\u001b[0m\n\u001b[1;32m   1558\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1559\u001b[0m     \"\"\"\n\u001b[0;32m-> 1560\u001b[0;31m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1561\u001b[0m     \u001b[0;31m# NOTE(mrry): Create these on first `__enter__` to avoid a reference cycle.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1562\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_default_graph_context_manager\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/intro-to-rnns/lib/python3.6/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, target, graph, config)\u001b[0m\n\u001b[1;32m    631\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_created_with_new_api\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    632\u001b[0m         \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 633\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_NewSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_graph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_c_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    634\u001b[0m         \u001b[0;31m# pylint: enable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    635\u001b[0m       \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mInternalError\u001b[0m: Failed to create session."
+     ]
+    }
+   ],
    "source": [
     "epochs = 20\n",
     "# Print losses every N interations\n",
