Finished generator and discrimiator setup

--- a/gan_mnist/Intro_to_GANs_Exercises.ipynb
+++ b/gan_mnist/Intro_to_GANs_Exercises.ipynb
@@ -25,11 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -41,11 +48,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-2-a37a59f11b0d>:2: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please write your own downloading logic.\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/base.py:252: _internal_retry.<locals>.wrap.<locals>.wrapped_fn (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use urllib or similar directly.\n",
+      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/ubuntu/anaconda3/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "mnist = input_data.read_data_sets('MNIST_data')"
@@ -64,15 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def model_inputs(real_dim, z_dim):\n",
-    "    inputs_real = \n",
-    "    inputs_z = \n",
+    "    inputs_real = tf.placholder(tf.float32, (None,real_dim), name=\"inputs_real\") # Discriminator Input\n",
+    "    inputs_z = tf.placholder(tf.float32, (None,z_dim), name=\"inputs_z\") # Generator Input\n",
     "    \n",
     "    return inputs_real, inputs_z"
    ]
@@ -114,10 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generator(z, out_dim, n_units=128, reuse=False,  alpha=0.01):\n",
@@ -135,15 +169,15 @@
     "        -------\n",
     "        out: \n",
     "    '''\n",
-    "    with tf.variable_scope # finish this\n",
+    "    with tf.variable_scope('generator', reuse=reuse): # finish this\n",
     "        # Hidden layer\n",
-    "        h1 = \n",
+    "        h1 = tf.layers.dense(z, n_units, activation=None)\n",
     "        # Leaky ReLU\n",
-    "        h1 = \n",
+    "        h1 = tf.maximum(alpha * h1, h1)\n",
     "        \n",
     "        # Logits and tanh output\n",
-    "        logits = \n",
-    "        out = \n",
+    "        logits = tf.layers.dense(h1, out_dim, activation=None)\n",
+    "        out = tf.tanh(logits)\n",
     "        \n",
     "        return out"
    ]
@@ -181,14 +215,14 @@
     "        -------\n",
     "        out, logits: \n",
     "    '''\n",
-    "    with tf.variable_scope # finish this\n",
+    "    with tf.variable_scope('discriminator', reuse=reuse) # finish this\n",
     "        # Hidden layer\n",
-    "        h1 =\n",
+    "        h1 = tf.layers.dense(x, n_units, activation=None)\n",
     "        # Leaky ReLU\n",
-    "        h1 =\n",
+    "        h1 = tf.maximum(alpha * h1, h1)\n",
     "        \n",
-    "        logits =\n",
-    "        out =\n",
+    "        logits = tf.layers.dense(h1, 1, activation=None)\n",
+    "        out = tf.sigmoid(logits)\n",
     "        \n",
     "        return out, logits"
    ]
@@ -569,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
